--- a/css/index.css
+++ b/css/index.css
@@ -2,14 +2,14 @@ section {
     border: 2px solid black;
     border-radius: 2em;
     padding-left: 0;
-    box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.75);
-    background: rgba(219,54,164,1);
+    box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.75);background: rgba(219,54,164,1);
     background: -moz-linear-gradient(top, rgba(219,54,164,1) 0%, rgba(233,128,242,1) 75%, rgba(233,128,242,1) 100%);
     background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(219,54,164,1)), color-stop(75%, rgba(233,128,242,1)), color-stop(100%, rgba(233,128,242,1)));
     background: -webkit-linear-gradient(top, rgba(219,54,164,1) 0%, rgba(233,128,242,1) 75%, rgba(233,128,242,1) 100%);
     background: -o-linear-gradient(top, rgba(219,54,164,1) 0%, rgba(233,128,242,1) 75%, rgba(233,128,242,1) 100%);
     background: -ms-linear-gradient(top, rgba(219,54,164,1) 0%, rgba(233,128,242,1) 75%, rgba(233,128,242,1) 100%);
     background: linear-gradient(to bottom, rgba(219,54,164,1) 0%, rgba(233,128,242,1) 75%, rgba(233,128,242,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#db36a4', endColorstr='#e980f2', GradientType=0 );
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#db36a4', endColorstr='#e980f2', GradientType=0 );
     padding-bottom: 2em;
     padding-top: 1em;
@@ -21,7 +21,8 @@ section {
 }
 
 #time {
-    border:5px solid #000000;
+    border:3px ridge #cb30d1;
+    border-radius:8px;
     width: 300px;
     margin: auto;
 }
