--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,10 @@ section {
     margin: auto;
 }
 
+h1 {
+    font-family: 'Berkshire Swash', cursive;
+}
+
 #inputTime {
     text-align: center;
 }
@@ -25,6 +29,10 @@ section {
     border-radius:8px;
     width: 300px;
     margin: auto;
+}
+
+#result{
+    font-family: 'Berkshire Swash', cursive;
 }
 
 @media (min-width: 992px) {
